# qemu-nc-tools

./: CMakeLists.txt  README.md  main.c
src/: CMakeLists.txt
src/libs/: CMakeLists.txt
src/libs/clangutils/: CMakeLists.txt  clangutils.h
src/tools/: CMakeLists.txt
src/tools/dlgen/: CMakeLists.txt
src/tools/lift/: CMakeLists.txt  main.cpp
